fdo#71248 "Excel VBA: ActiveDocument is not tracking currently selected Doc"

Change-Id: I86606646206ec26e2822a6e27888537d44351b7b