sw/source/core/unocore/unomap.cxx
@@ -3309,3 +3309,4 @@ const SfxItemPropertySet*  SwUnoPropertyMapProvider::GetPropertySet( sal_uInt16 
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
+
